# UIUCTF-2023-Public

./: .gitattributes  .gitignore  README.md
.github/workflows/: ctfd-manual.yml
challenges/crypto/at_home/: challenge.yml
challenges/crypto/crack_the_safe/: challenge.yml  gen_prime.py  secret.py  sol.ipynb
challenges/crypto/group_project/: SOLVE.md  challenge.yaml  challenge.yml
challenges/misc/schrodingers-cat/: .envrc  SOLVE.org  challenge.yaml  challenge.yml  flake.nix  pyproject.toml
challenges/misc/schrodingers-cat/challenge/: Dockerfile  flag.txt  nsjail.cfg
challenges/misc/schrodingers-cat/healthcheck/: Dockerfile  healthcheck.py  solve.py
challenges/misc/vimjail1/: SOLVE.md  (+2 more)
ctfd/: chal  ctfd.redis.yaml  ctfd.secret.example.yaml  ctfd.secret.template.yaml  ctfd.secret.yaml  ctfd.yaml
ctfd/ctfd/: Dockerfile  uiuctf-2023-deploy-key  uiuctf-2023-deploy-key.pub
ctfd/nginx/: nginx.conf
ctfd/redis/: Dockerfile  redis.conf
instancer/: certbot-fetch.yaml  certbot.yaml  chal  instancer.secret.example.yaml  instancer.secret.yaml  instancer.yaml  perchallenge.yaml
instancer/hostproxy/: Dockerfile  nginx.conf  proxy.lua
instancer/hostproxy-cert/: adminplz-fullchain.pem  adminplz-privkey.pem  mock-fullchain.pem  mock-privkey.pem
instancer/instance-templates/: adminplz.yaml  mock.yaml
instancer/instancer/: Dockerfile
kctf/: activate
kctf/config/: remote-cluster
status-discord-webhook/: README.md  bot.secret.example.yaml  bot.secret.yaml  bot.yaml  chal  init_message.py
status-discord-webhook/bot/: Dockerfile
traefik_ingress/: traefik.yaml
(+239 files in other folders)
